fixing styling problem that only showed up on small/landscape views

--- a/style/pushpop.scss
+++ b/style/pushpop.scss
@@ -491,7 +491,6 @@ body {
     border-bottom: none;
     text-shadow: none;
     color: #fff;
-    width: 100%;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
